--- a/docs/Douglass_IntroductionToMachineLearning_2018_Syllabus.rmd
+++ b/docs/Douglass_IntroductionToMachineLearning_2018_Syllabus.rmd
@@ -9,6 +9,16 @@ output:
     toc_float: true
 ---
 
+
+```{css}
+pre code, pre, code {
+  white-space: pre !important;
+  overflow-x: !scroll !important;
+  word-break: keep-all !important;
+  word-wrap: initial !important;
+}
+```
+
 Rex W. Douglass<br/>
 Director Machine Learning for Social Science Lab (MSSL)<br/>
 Center for Peace and Security Studies (cPASS)<br/>
@@ -20,21 +30,19 @@ www.rexdouglass.com<br/>
 
 # Course Overview
 
-This is a 6 hour introduction to machine learning spread across two three-hour lectures. The goal of this very short course is specific: to give you enough of an overview, vocabulary, and intuition, so that you can identify machine learning problems in the wild and begin your own research into relevant literatures and possible approaches. The goal is not to train you to execute a particular machine learning solution. There are far too many approaches available; they may not cover whatever problem you find; and the state of the art will be different in a year or two anyway. Instead, we will learn how to think about and classify problems into broad types, how to define and measure the efficacy of different solutions to that problem, how to avoid some common and subtle mistakes, and how to think about a full machine learning pipeline from start to finish.
-
 Please bring a two sided coin(s) and scratch paper to class for passing notes for the demonstrations.
 
+This is a 6 hour introduction to machine learning spread across two three-hour lectures. The goal of this very short course is narrow: to give you enough of an overview, vocabulary, and intuition, so that you can identify machine learning problems in the wild and begin your own research into relevant literatures and possible approaches. The goal is not to train you to execute a particular machine learning solution. There are far too many approaches available; they may not cover whatever problem you find; and the state of the art will be different in a year or two anyway. Instead, we will learn how to think about and classify problems into broad types, how to define and measure the efficacy of different solutions to that problem, how to avoid some common and subtle mistakes, and how to think about a full machine learning pipeline from start to finish.
+
+
 ## Course Slides
-
-[Course Slides (1/4)](https://docs.google.com/presentation/d/19i2om_jwK8m3a-jNvgtM-WMT1l1HAGaGuWeb4bgLsTM/edit?usp=sharing)
-
-[Course Slides (2/4)](https://docs.google.com/presentation/d/1Z857fFS692ijppXZzrPVjsVxsllwDKzoFBWOchRjDfU/edit?usp=sharing)
-
-[Course Slides (3/4)](https://docs.google.com/presentation/d/1HRzRTjz31vt_HwOkKE_jNUYhg1a2LrOxS6LM3RI9dE4/edit?usp=sharing)
-
+* [Course Slides (1A)](https://docs.google.com/presentation/d/19i2om_jwK8m3a-jNvgtM-WMT1l1HAGaGuWeb4bgLsTM/edit?usp=sharing)
+* [Course Slides (1B)](https://docs.google.com/presentation/d/1Z857fFS692ijppXZzrPVjsVxsllwDKzoFBWOchRjDfU/edit?usp=sharing)
+* [Course Slides (2A)](https://docs.google.com/presentation/d/1HRzRTjz31vt_HwOkKE_jNUYhg1a2LrOxS6LM3RI9dE4/edit?usp=sharing)
+* [Course Slides (2B)](https://docs.google.com/presentation/d/1GSKQeoYWTVlIfWQIV9pXyoZW3DVdL2ylmaUU5dN9sGA/edit?usp=sharing)
 
 ## Readings Policy
-Math and programming are not something you learn, they're something you get used to. It is a trade, that takes years of trial and error and concrete projects to acquire. The readings of this course are, with a few exceptions, voluntary and intended for self study. They are to help point you in the right direction when you realize you need to start brushing up on a particular set of tools in order to tackle a particular problem.
+Math and programming are not something you learn, they're something you get used to. The readings of this course are, with a few exceptions, voluntary and intended for self study. They are to help point you in the right direction when you realize you need to start brushing up on a particular set of tools in order to tackle a particular problem.
 
 Required - Skim in order to improve discussion and understanding during lecture <br/>
 Recommended - Eventually skim/read during self study <br/>
@@ -42,7 +50,7 @@ Reference - Deeper mathematical or historical context <br/>
 
 ## Textbooks
 
-Do not purchase any books - each of these should be available for free on-line at the link given.
+Do not purchase any books - each of these should be available for free on-line at the link given. Any individual one would provide a decent background to the field of machine learning. For this course, I've picked select chapters when I thought they did a good job reviewing a specific subtopic.
 
 * (CIML)  [A course in machine learning](ciml.info/), Hal Daume III
 * (ESL) [Elements of Statistical Learning](https://web.stanford.edu/~hastie/ElemStatLearn/), Trevor Hastie and Robert Tibshirani
@@ -56,16 +64,26 @@ Do not purchase any books - each of these should be available for free on-line a
 
 ## General Resources
 
+Related Classes
+*[COMS W4721 Machine Learning for Data Science](http://www.columbia.edu/~jwp2128/Teaching/W4721/Spring2017/W4721Spring2017.html)
+
 There are a number places on-line for constant updates on machine learning <br/>
 * [Reddit Machine Learning Subreddit](https://www.reddit.com/r/MachineLearning/)
 * [arxiv](https://twitter.com/arxiv_org)
 * [My twitter feed](https://twitter.com/RexDouglass)
 * [Political Analysis](https://www.cambridge.org/core/journals/political-analysis)
 
+Conferences
+* [Top Conferences for Machine Learning & Arti. Intelligence](http://www.guide2research.com/topconf/machine-learning)
+* [Neural Information Processing Systems (NIPS)](https://nips.cc/)
+
 ## Toy problems
-[UC Irvine Machine Learning Repository](http://archive.ics.uci.edu/ml/index.php)<br/>
-[Kaggle Datasets](https://www.kaggle.com/datasets?sortBy=votes&group=all)<br/>
-[List_of_datasets_for_machine_learning_research](https://en.wikipedia.org/wiki/List_of_datasets_for_machine_learning_research)<br/>
+* [UC Irvine Machine Learning Repository](http://archive.ics.uci.edu/ml/index.php)<br/>
+* [Kaggle Datasets](https://www.kaggle.com/datasets?sortBy=votes&group=all)<br/>
+* [List_of_datasets_for_machine_learning_research](https://en.wikipedia.org/wiki/List_of_datasets_for_machine_learning_research)<br/>
+
+["Breast Cancer"](https://rpubs.com/raviolli77/352956), Raul Eulogio, January 26, 2018
+
 
 ## Software and Programming
 
@@ -81,294 +99,431 @@ Students are not expected to know any particular language or set of software. We
 * ["An introduction to regular expressions"](https://www.oreilly.com/ideas/an-introduction-to-regular-expressions), Thomas Nield, December 13, 2017 ,
 * [RegExplain]("https://github.com/gadenbuie/regexplain/#readme")
 * ["The Plain Person’s Guide to Plain Text Social Science"](http://plain-text.co/), Kieran Healy, 2018-04-28
-"Statistical Data Cleaning with Applications in R"
+* "Statistical Data Cleaning with Applications in R"
+* [scikit-learn](http://scikit-learn.org/stable/)
+
+## Notes on this Guide
+
+This guide is written as an [R notebook](https://bookdown.org/yihui/rmarkdown/notebook.html) using [R-Studio](https://www.rstudio.com/). It renders output as static HTML that you should be able to view on an regular browser.
+
+```{r}
+library(pacman)
+p_load(infotheo)
+p_load(tidyverse)
+p_load(ggplot2)
+p_load(cowplot)
+p_load(mlbench)
+
+```
 
 # Introduction
 
 ## What is machine learning?
+* (CIML), [Chapter 1,](http://ciml.info/dl/v0_99/ciml-v0_99-ch01.pdf) <br/>
+* WMLW 1.0 "Introduction" <br/>
 
-(CIML), [Chapter 1,](http://ciml.info/dl/v0_99/ciml-v0_99-ch01.pdf)
-
-WMLW 1.0 "Introduction"
+### Examples: Why Machine Learning?
+* ["ViEWS: a political Violence Early-Warning System,"](http://pcr.uu.se/research/views/) <br/>
+* ["Safe Disposal of Unexploded WWII Bombs,"](http://staff.math.su.se/hoehle/blog/2018/05/25/uxb.html) Michael Höhle, May 25, 2018, <br/>
+* ["Predicting Race and Ethnicity From the Sequence of Characters in a Name,"](https://arxiv.org/pdf/1805.02109.pdf),Gaurav Sood and Suriyan Laohaprapanon, May 8, 2018,  <br/>
+* ["ethnicolr: Predict Race and Ethnicity From Name,"](https://github.com/appeler/ethnicolr)<br/>
 
 ## What isn't machine learning?
 
 ### Statistics
-
-["Statistical Modeling: The Two Cultures (with comments and a rejoinder by the  author),"](https://projecteuclid.org/download/pdf_1/euclid.ss/1009213726) Leo Breiman, Statistical Science, 2001, Vol. 16, No. 3, 199–231
+* ["Statistical Modeling: The Two Cultures (with comments and a rejoinder by the  author),"](https://projecteuclid.org/download/pdf_1/euclid.ss/1009213726) Leo Breiman, Statistical Science, 2001, Vol. 16, No. 3, 199–231 <br/>
 
 ### Causal Inference
-Joshua D. Angrist & Jörn-Steffen Pischke, "Mostly Harmless Econometrics An Empiricist's Companion," 2009
-
-["Basic Concepts of Statistical Inference for Causal Effects in Experiments and Observational Studies,"](http://www.stat.columbia.edu/~cook/qr33.pdf) Donald B. Rubin, 2004
-
-
-## Why Machine Learning?
-
-["ViEWS: a political Violence Early-Warning System,"](http://pcr.uu.se/research/views/)
-
-["Safe Disposal of Unexploded WWII Bombs,"](http://staff.math.su.se/hoehle/blog/2018/05/25/uxb.html) Michael Höhle, May 25, 2018, 
-
-["Predicting Race and Ethnicity From the Sequence of Characters in a Name,"](https://arxiv.org/pdf/1805.02109.pdf),Gaurav Sood and Suriyan Laohaprapanon, May 8, 2018,  
-["ethnicolr: Predict Race and Ethnicity From Name,"](https://github.com/appeler/ethnicolr)
+* Joshua D. Angrist & Jörn-Steffen Pischke, "Mostly Harmless Econometrics An Empiricist's Companion," 2009
+* ["Basic Concepts of Statistical Inference for Causal Effects in Experiments and Observational Studies,"](http://www.stat.columbia.edu/~cook/qr33.pdf) Donald B. Rubin, 2004 <br/>
 
 # Information Theory
+* [Information_theory](https://en.wikipedia.org/wiki/Information_theory)
+* ["Visual Information Theory,"](http://colah.github.io/posts/2015-09-Visual-Information/) Christopher Olah, , October 14, 2015, <br/>
+* [Shannon Weaver Model](https://en.wikipedia.org/wiki/Shannon%E2%80%93Weaver_model)<br/>
+* ["A Mathematical Theory of Communication,"](http://math.harvard.edu/~ctm/home/text/others/shannon/entropy/entropy.pdf), C. E. SHANNON, October 1948,  The Bell System * Technical Journal, Vol. 27, pp. 379–423, 623–656, July, <br/>
+* PRML 1.6 "Information Theory" <br/>
 
-## Shannon–Weaver Model of Communication
+# Information Sources $Y$
 
-[Shannon Weaver Model](https://en.wikipedia.org/wiki/Shannon%E2%80%93Weaver_model)
-
-["Visual Information Theory,"](http://colah.github.io/posts/2015-09-Visual-Information/) Christopher Olah, , October 14, 2015, 
-
-["A Mathematical Theory of Communication,"](http://math.harvard.edu/~ctm/home/text/others/shannon/entropy/entropy.pdf), C. E. SHANNON, October 1948,  The Bell System Technical Journal, Vol. 27, pp. 379–423, 623–656, July,  
-
-PRML 1.6 "Information Theory"
+## Random Variables and Distributions
+* [Random_variable](https://en.wikipedia.org/wiki/Random_variable)
+* [Binomial_distribution](https://en.wikipedia.org/wiki/Binomial_distribution)
+* ["Review of Probability Theory"](http://cs229.stanford.edu/section/cs229-prob.pdf), Arian Maleki and Tom Do <br/>
+* PRML 2.0 <br/>
 
 ## Entropy
-[Entropy_(information_theory)](https://en.wikipedia.org/wiki/Entropy_(information_theory))
+* [Entropy (information_theory)](https://en.wikipedia.org/wiki/Entropy_(information_theory))<br/>
+* [Package ‘entropy,’ "Estimation of Entropy, Mutual Information and Related Quantities,"](http://strimmerlab.org/software/entropy/), February 19, 2015  <br/>
+* [infotheo](https://cran.r-project.org/web/packages/infotheo/index.html), Patrick E. Meyer, 2014-07-26, R Package <br/>
+* [Philentropy: Information Theory and Distance Quantification with R.](https://doi.org/10.21105/joss.00765), Drost, (2018), Journal of Open Source Software, 3(26), 765  <br/>
 
-## Distributions and Probability
-[Arian Maleki and Tom Do, "Review of Probability Theory,"](http://cs229.stanford.edu/section/cs229-prob.pdf)
+## Binary Source ($<=1bit$)
 
-PRML 2.0
+#### Two Headed Coin
+```{r}
+N <- 20 #Flip a coin 10 times
+sample_space <- c(1,0) #Heads and Tails
 
-## Transmitters
-[Function_(mathematics)](https://en.wikipedia.org/wiki/Function_(mathematics))
+p <- 1 #Two headed coin
+Y_coin_twoheaded <- sample(sample_space, size = N,  replace = TRUE,  prob = c(p, 1 - p))  
+print(table(Y_coin_twoheaded))
 
-## Receivers
-[Inverse_function](https://en.wikipedia.org/wiki/Inverse_function)
+library(infotheo)
+print(natstobits(entropy(Y_coin_twoheaded, method="emp")))
+
+```
+
+A fair coin has equal likelihood of both heads and tails. Estimated entropy is close to the true value of 1 bit.
+
+#### Fair Coin 
+
+```{r}
+p <- 0.5 #Fair Coin
+Y_coin_fair <- sample(sample_space, size = N,  replace = TRUE,  prob = c(p, 1 - p))  
+print(table(Y_coin_fair))
+print(natstobits(entropy(Y_coin_fair, method="emp")))
+```
+
+#### Unfair Coin (p=0.8)
+An unfair coin is weighted to be more likely to land heads or tails. Estimated entropy is less than a full bit. There is less surprise than from a full fair coin flip.
+
+```{r}
+p <- 0.8 #Unfair Coin
+Y_coin_unfair <- sample(sample_space, size = N,  replace = TRUE,  prob = c(p, 1 - p))  
+print(table(Y_coin_unfair))
+print(natstobits(entropy(Y_coin_unfair, method="emp")))
+```
+
+#### UCI Breast Cancer Dataset
+
+```{r}
+data(BreastCancer)
+summary(BreastCancer$Class)
+```
+
+```{r}
+print(natstobits(entropy(BreastCancer$Class, method="emp")))
+```
+
+Iris Dataset
+
+```{r}
+data(iris)
+summary(iris$Species)
+print(natstobits(entropy(iris$Species, method="emp")))
+```
+
+```{r}
+#crim per capita crime rate by town
+#zn proportion of residential land zoned for lots over 25,000 sq.ft
+#indus proportion of non-retail business acres per town
+#chas Charles River dummy variable (= 1 if tract bounds river; 0 otherwise)
+#nox nitric oxides concentration (parts per 10 million)
+#rm average number of rooms per dwelling
+#age proportion of owner-occupied units built prior to 1940
+#dis weighted distances to five Boston employment centres
+#rad index of accessibility to radial highways
+#tax full-value property-tax rate per USD 10,000
+#ptratio pupil-teacher ratio by town
+#b 1000(B − 0.63)2 where B is the proportion of blacks by town
+#lstat percentage of lower status of the population
+#medv median value of owner-occupied homes in USD 1000’s
+data(BostonHousing)
+BostonHousing$medv
+hist(BostonHousing$medv)
+summary(BostonHousing$medv)
+print(natstobits(entropy(discretize(BostonHousing$medv), method="emp")))
+```
+
+##
+
+
+## Transmitters $X=f(Y)$
+[Function_(mathematics)](https://en.wikipedia.org/wiki/Function_(mathematics))<br/>
+
+```{r}
+
+n=100
+Y_unif=runif(n=n)
+beta_1=.5
+X=(Y_unif)/beta_1 #epsilon_gaussian
+p1 <- data.frame(X,Y_unif) %>% ggplot(aes(x=Y_unif,y=X)) + geom_point()
+
+epsilon_gaussian=rnorm(n=n, mean = 0, sd = 1)
+beta_1=.5
+X=(Y_unif)/beta_1 + (Y_unif^2)/beta_1 #epsilon_gaussian
+p2 <- data.frame(X,Y_unif) %>% ggplot(aes(x=Y_unif,y=X)) + geom_point()
+
+X= Y_unif > .5
+p3 <- data.frame(X,Y_unif) %>% ggplot(aes(x=Y_unif,y=X)) + geom_point()
+
+X= cos(Y_unif)
+p4 <- data.frame(X,Y_unif) %>% ggplot(aes(x=Y_unif,y=X)) + geom_point()
+
+plot_grid(p1,p2,p3,p4, labels = c("A", "B", "C", "D"), ncol = 2)
+
+```
+
+
+[Linear_separability](https://en.wikipedia.org/wiki/Linear_separability)
+
+## Messages $X$
+
+## Receivers $\hat{Y}=\hat{f}(X)$
+* [Inverse_function](https://en.wikipedia.org/wiki/Inverse_function)<br/>
 
 # Zero-Bit source
 
-Zero-Bit information sources are constants that don't vary.
+* Zero-Bit information sources are constants that don't vary.
 
-Zero-Bit source, Zero-Bit message: No variation and no measurement. <br/>
-Zero-Bit information source, One-Bit message: No variation, but a single measurement with variation between two states. <br/>
-Zero-Bit information source, N-Bit message: No variation, and an arbitrary number of measurements with arbitrary number of states <br/>
+* Zero-Bit source, Zero-Bit message: No variation and no measurement. <br/>
+* Zero-Bit information source, One-Bit message: No variation, but a single measurement with variation between two states. <br/>
+* Zero-Bit information source, N-Bit message: No variation, and an arbitrary number of measurements with arbitrary number of states <br/>
 
-Selecting on the Dependent Variable
-["Design, Inference, and the Strategic Logic of Suicide Terrorism"](https://pdfs.semanticscholar.org/f192/cf69908c84d92d269ef52c337fa487d6b65e.pdf), SCOTT ASHWORTH, JOSHUA D. CLINTON, ADAM MEIROWITZ, and KRISTOPHER W. RAMSAY, 2008, APSR
+* Selecting on the Dependent Variable
+* ["Design, Inference, and the Strategic Logic of Suicide Terrorism"](https://pdfs.semanticscholar.org/f192/cf69908c84d92d269ef52c337fa487d6b65e.pdf), SCOTT ASHWORTH, JOSHUA D. CLINTON, ADAM MEIROWITZ, and KRISTOPHER W. RAMSAY, 2008, APSR
+
 
 # One-Bit sources
 
 One-Bit information sources are variables that can take on two different states, e.g. a coin flip. Call $Y$ the true state at the source, and $\hat{Y}$ the mental model of the state at the destination.
 
+* [Binary_classification](https://en.wikipedia.org/wiki/Binary_classification)
 
-## Evaluating Reconstructions
 
-[Scoring Rules](https://en.wikipedia.org/wiki/Scoring_rule)
-[Mutual_information](https://en.wikipedia.org/wiki/Mutual_information)
-[Evaluation_of_binary_classifiers](https://en.wikipedia.org/wiki/Evaluation_of_binary_classifiers)<br/>
-[Confusion_matrix](https://en.wikipedia.org/wiki/Confusion_matrix)<br/>
-[Precision_and_recall](https://en.wikipedia.org/wiki/Precision_and_recall)<br/>
-[Sensitivity_and_specificity](https://en.wikipedia.org/wiki/Sensitivity_and_specificity)<br/>
-[F1_score](https://en.wikipedia.org/wiki/F1_score)<br/>
+How should we compare the true reality $Y$ to our mental model of it $\hat{Y}$?
 
-[Package ‘entropy,’ "Estimation of Entropy, Mutual Information and Related Quantities,"](http://strimmerlab.org/software/entropy/), February 19, 2015  <br/>
-[Philentropy: Information Theory and Distance Quantification with R.](https://doi.org/10.21105/joss.00765), Drost, (2018), Journal of Open Source Software, 3(26), 765  <br/>
+* [Scoring Rules](https://en.wikipedia.org/wiki/Scoring_rule)<br/>
+* [Evaluation_of_binary_classifiers](https://en.wikipedia.org/wiki/Evaluation_of_binary_classifiers)<br/>
+* [Confusion_matrix](https://en.wikipedia.org/wiki/Confusion_matrix)<br/>
+
+```{r}
+Y_hat=Y_coin_fair
+table(Y_coin_unfair,Y_hat)
+```
+
+```{r}
+p_load(Metrics)
+accuracy(Y_coin_unfair, Y_hat)
+```
+
+* [Precision_and_recall](https://en.wikipedia.org/wiki/Precision_and_recall)<br/>
+```{r}
+precision(Y_coin_unfair, Y_hat)
+```
+
+* [F1_score](https://en.wikipedia.org/wiki/F1_score)<br/>
+```{r}
+f1(Y_coin_unfair, Y_hat)
+```
+
+* [Mutual_information](https://en.wikipedia.org/wiki/Mutual_information)<br/>
+```{r}
+print(natstobits(mutinformation(Y_coin_unfair, Y_hat, method="emp")))
+```
+
+* [Sensitivity_and_specificity](https://en.wikipedia.org/wiki/Sensitivity_and_specificity)<br/>
+* ["Finding Similar Items"](http://infolab.stanford.edu/~ullman/mmds/ch3.pdf), Jure Leskovec, Anand Rajaraman, Jeff Ullman, Chapter 3, [Mining of Massive Datasets](http://www.mmds.org/), 2014<br/>
+
+### Imbalanced Data
+
+* ["Facing Imbalanced Data Recommendations for the Use of Performance Metrics"](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4285355/), László A. Jeni,1 Jeffrey F. Cohn,1,2 and Fernando De La Torre, Int Conf Affect Comput Intell Interact Workshops. 2013; 2013: 245–251.
+
+## Probalistic Scoring Functions
+* [Proper Scoring Rules](https://en.wikipedia.org/wiki/Scoring_rule#ProperScoringRules)<br/>
+* [Brier_score](https://en.wikipedia.org/wiki/Brier_score)<br/>
+* [Receiver operating characteristic](https://en.wikipedia.org/wiki/Receiver_operating_characteristic)<br/>
+* [An introduction to ROC analysis](http://people.inf.elte.hu/kiss/13dwhdm/roc.pdf), Tom Fawcett, 2006, Pattern Recongnition Letters<br/>
+* [what-does-auc-stand-for-and-what-is-it](https://stats.stackexchange.com/questions/132777/what-does-auc-stand-for-and-what-is-it)<br/>
+
+# 2-Bit sources
+* [Multiclass_classification](https://en.wikipedia.org/wiki/Multiclass_classification) <br/>
+* [Cross Entropy](https://en.wikipedia.org/wiki/Cross_entropy) <br/>
+* Tom Fawcett (2006) “An introduction to ROC analysis”. Pattern Recognition Letters 27, 861–874. DOI: 10.1016/j.patrec.2005.10.010. <br/>
+* David J. Hand and Robert J. Till (2001). A Simple Generalisation of the Area Under the ROC Curve for Multiple Class Classification Problems. Machine Learning 45(2), p. 171–186. DOI: 10.1023/A:1010920819831. <br/>
+* ["pROC: Display and Analyze ROC Curves"](https://web.expasy.org/pROC/), 2018-05-06 <br/>
+* [pROC: an open-source package for R and S+ to analyze and compare ROC curves](https://bmcbioinformatics.biomedcentral.com/articles/10.1186/1471-2105-12-77), Xavier * * Robin, Natacha Turck, Alexandre Hainard, Natalia Tiberti, Frédérique Lisacek, Jean-Charles Sanchez and Markus Müller (2011). BMC Bioinformatics, 12, p. 77 <br/>
+
+# N-Bit sources
+* [Mean_squared_error](https://en.wikipedia.org/wiki/Mean_squared_error)
 
 # One-Bit source, One-Bit message
 
 ## What makes a good receiver?
-
-PRML 1.5 "Decision Theory"
-
-["Understanding the Bias-Variance Tradeoff,"](http://scott.fortmann-roe.com/docs/BiasVariance.html), Scott Fortmann-Roe,  2012, 
+* PRML 1.5 "Decision Theory" <br/>
+* ESL 2.4 Statistical Decision Theory
+* ["Understanding the Bias-Variance Tradeoff,"](http://scott.fortmann-roe.com/docs/BiasVariance.html), Scott Fortmann-Roe,  2012, <br/>
 
 ## No Free Lunch
 
-WMLW 2.0 "Related Work"
+* WMLW 2.0 "Related Work"
+* ["No Free Lunch Theorems for Optimization,"](https://ti.arc.nasa.gov/m/profile/dhw/papers/78.pdf) David H. Wolpert and William G. Macready, 1997, <br/>
 
-["No Free Lunch Theorems for Optimization,"](https://ti.arc.nasa.gov/m/profile/dhw/papers/78.pdf) David H. Wolpert and William G. Macready, 1997, 
+## Parametric Functions 
 
-### In Sample/Out of Sample / Cross Validation
+## Overfitting
+* [Overfitting](https://en.wikipedia.org/wiki/Overfitting)<br/>
 
-[Training,_test,_and_validation_sets](https://en.wikipedia.org/wiki/Training,_test,_and_validation_sets)<br/>
-[Cross-validation_(statistics)](https://en.wikipedia.org/wiki/Cross-validation_(statistics))<br/>
-
-["Linear Model Selection by Cross-Validation,"](http://www.libpls.net/publication/MCCV_Shao_1993.pdf), Jun Shao, 1993<br/>
-["Cross-validation failure: small sample sizes lead to large error bars,"](https://hal.inria.fr/hal-01545002/), Gaël Varoquaux, 2017<br/>
-
-## Probalistic Reconstructions and Hedging Bets
-
-[Proper Scoring Rules](https://en.wikipedia.org/wiki/Scoring_rule#ProperScoringRules)<br/>
-[Brier_score](https://en.wikipedia.org/wiki/Brier_score)<br/>
-[Receiver operating characteristic](https://en.wikipedia.org/wiki/Receiver_operating_characteristic)<br/>
-[An introduction to ROC analysis](http://people.inf.elte.hu/kiss/13dwhdm/roc.pdf), Tom Fawcett, 2006, Pattern Recongnition Letters<br/>
-[what-does-auc-stand-for-and-what-is-it](https://stats.stackexchange.com/questions/132777/what-does-auc-stand-for-and-what-is-it)<br/>
+## In Sample/Out of Sample / Cross Validation
+* [Training,_test,_and_validation_sets](https://en.wikipedia.org/wiki/Training,_test,_and_validation_sets)<br/>
+* [Cross-validation_(statistics)](https://en.wikipedia.org/wiki/Cross-validation_(statistics))<br/>
+* ["Linear Model Selection by Cross-Validation,"](http://www.libpls.net/publication/MCCV_Shao_1993.pdf), Jun Shao, 1993<br/>
+* ["Cross-validation failure: small sample sizes lead to large error bars,"](https://hal.inria.fr/hal-01545002/), Gaël Varoquaux, 2017<br/>
 
 # One-Bit source, Two-Bit message
-
-## Dictionary Learning
-
 ## Ommitted Variable Bias
+* [Simpsons Paradox](https://en.wikipedia.org/wiki/Simpson%27s_paradox)<br/>
 
-[Simpsons Paradox](https://en.wikipedia.org/wiki/Simpson%27s_paradox)
+### Feature Selection / Included Variable Bias
+* [Let’s Put Garbage—Can Regressions and Garbage—Can Probits Where They Belong](http://www.columbia.edu/~gjw10/achen04.pdf), Christopher H. Achen, Conflict Management and Peace Science, 2005
+* ["The Phantom Menace: Omitted Variable Bias in Econometric Research"](http://www.saramitchell.org/clarke05.pdf), Kevin A. Clarke, 2005, Conflict Management and Peace Science
+* [Feature_selection](https://en.wikipedia.org/wiki/Feature_selection)<br/>
+* [Confounding](https://en.wikipedia.org/wiki/Confounding)<br/>
+* ["Statistical learning and selective inference"](http://www.pnas.org/content/pnas/112/25/7629.full.pdf) Jonathan Taylora and Robert J. Tibshirani, June 23, 2015<br/>
+* ["The garden of forking paths: Why multiple comparisons can be a problem,  when there is no “fishing expedition” or “p-hacking” and the research  was posited ahead of time"](http://www.stat.columbia.edu/~gelman/research/unpublished/p_hacking.pdf), Andrew Gelman and Eric Loken, 14 Nov 2013, Unpublished Manuscript<br/>
+* [P-Hacking](https://projects.fivethirtyeight.com/p-hacking/)<br/>
+* [A Machine Learning Alternative to P-values](https://arxiv.org/pdf/1701.04944.pdf),Min Lu and Hemant Ishwaran, February 22, 2017<br/>
+* [Feature Selection with the R Package MXM:  Statistically-Equivalent Feature Subsets](https://arxiv.org/pdf/1611.03227.pdf) <br/>
+* ["bounceR"](https://github.com/STATWORX/bounceR), R Package  <br/>
+
+* https://en.wikipedia.org/wiki/Extreme_bounds_analysis
+* ['I JUST RAN Two MILLION REGRESSIONS'](http://www.ecostat.unical.it/Aiello/Didattica/economia_Crescita/CRESCITA/CRESCITA_Sala-i-Martin-AER-1997.pdf), Xavier Sala-i-Martin, 1997, American Economic Review <br/>
+* ["ExtremeBounds: Extreme Bounds Analysis in R"](https://cran.r-project.org/web/packages/ExtremeBounds/vignettes/ExtremeBounds.pdf) <br/>
+
+## Model Complexity/Parismony
+* AIC (Akaike 1973)
+* [Akaike information criterion (AIC)](https://en.wikipedia.org/wiki/Akaike_information_criterion)<br/>
+* BIC (Schwarz 1978)
+* [Bayesian information criterion (BIC)](https://en.wikipedia.org/wiki/Bayesian_information_criterion)<br/>
+
+## Regularization, e.g. Lasso/Ridge Regression
+* https://en.wikipedia.org/wiki/Lasso_(statistics)
+* ["Regression shrinkage and selection via the lasso"](http://statweb.stanford.edu/~tibs/lasso/lasso.pdf), Tibshirani, R., 1996,  J. Royal. Statist. Soc B., Vol. 58, No. 1, pages 267-288)
+* ["Glmnet Vignette"](https://cran.r-project.org/web/packages/glmnet/vignettes/glmnet_beta.pdf), Trevor Hastie and Junyang Qian, September 13, 2016
+
 
 ## Feature Engineering
-
-[Feature_engineering](https://en.wikipedia.org/wiki/Feature_engineering)
-
-[Interaction_(statistics)](https://en.wikipedia.org/wiki/Interaction_(statistics))
-
-["How Much Should We Trust Estimates from Multiplicative Interaction Models? Simple Tools to Improve Empirical<br/> Practice,"](http://yiqingxu.org/papers/english/2018_HMX_interaction/main.pdf), Jens Hainmueller Jonathan Mummolo Yiqing Xu,, April 20, 2018, Political Analysis<br/>
-
-## Included Variable Bias
-
-[Feature_selection](https://en.wikipedia.org/wiki/Feature_selection)<br/>
-[Confounding](https://en.wikipedia.org/wiki/Confounding)<br/>
-
-["Statistical learning and selective inference"](http://www.pnas.org/content/pnas/112/25/7629.full.pdf) Jonathan Taylora and Robert J. Tibshirani, June 23, 2015<br/>
-
-["The garden of forking paths: Why multiple comparisons can be a problem,  when there is no “fishing expedition” or “p-hacking” and the research  was posited ahead of time"](http://www.stat.columbia.edu/~gelman/research/unpublished/p_hacking.pdf), Andrew Gelman and Eric Loken, 14 Nov 2013, Unpublished Manuscript<br/>
-
-[P-Hacking](https://projects.fivethirtyeight.com/p-hacking/)<br/>
-
-[A Machine Learning Alternative to P-values](https://arxiv.org/pdf/1701.04944.pdf),Min Lu and Hemant Ishwaran, February 22, 2017<br/>
-
-## Regularization, Model Complexity/Parismony
-
-[Akaike information criterion (AIC)](https://en.wikipedia.org/wiki/Akaike_information_criterion)<br/>
-[Bayesian information criterion (BIC)](https://en.wikipedia.org/wiki/Bayesian_information_criterion)<br/>
+* [Feature_engineering](https://en.wikipedia.org/wiki/Feature_engineering)<br/>
+* [Interaction_(statistics)](https://en.wikipedia.org/wiki/Interaction_(statistics))<br/>
+* ["How Much Should We Trust Estimates from Multiplicative Interaction Models? Simple Tools to Improve Empirical Practice,"](http://yiqingxu.org/papers/english/2018_HMX_interaction/main.pdf), Jens Hainmueller Jonathan Mummolo Yiqing Xu,, April 20, 2018, Political Analysis<br/>
+* https://en.wikipedia.org/wiki/Support_vector_machine <br/>
+* [ELI5](https://github.com/TeamHG-Memex/eli5) <br/>
 
 # Two-Bit source, One-Bit message
 
 ### Bandwidth / Over determination
-[Overdetermined_system](https://en.wikipedia.org/wiki/Overdetermined_system)
+* [Overdetermined_system](https://en.wikipedia.org/wiki/Overdetermined_system)<br/>
 
 ## One-Bit source, N-bit message
 
 ### Curse of Dimensionality
 
-[Curse_of_dimensionality](https://en.wikipedia.org/wiki/Curse_of_dimensionality) <br/>
-[The Curse of Dimensionality in classification](http://www.visiondummy.com/2014/04/curse-dimensionality-affect-classification/), Vincent Spruyt <br/>
+* [Curse_of_dimensionality](https://en.wikipedia.org/wiki/Curse_of_dimensionality) <br/>
+* [The Curse of Dimensionality in classification](http://www.visiondummy.com/2014/04/curse-dimensionality-affect-classification/), Vincent Spruyt <br/>
 
 # N-bit source, One-Bit message
 
 # Two-Bit  source, Two-Bit message
 
 # N-bit source, N-bit message
-[Binary_number#Counting_in_binary](https://en.wikipedia.org/wiki/Binary_number#Counting_in_binary)
+* [Binary_number#Counting_in_binary](https://en.wikipedia.org/wiki/Binary_number#Counting_in_binary) <br/>
 
 # One-Bit source, One-Bit message, One-Bit noise
 
 # Nearest Neighbor
-
-#### Dictionary Learning
-https://en.wikipedia.org/wiki/Sparse_dictionary_learning
-
-### Partioning
-
-#### Nearest Neighbor
-https://en.wikipedia.org/wiki/K-nearest_neighbors_algorithm
+* [K-nearest_neighbors_algorithm](https://en.wikipedia.org/wiki/K-nearest_neighbors_algorithm) <br/>
 
 Integer encoder
 Latent variable model
 
 #### Clustering
-https://en.wikipedia.org/wiki/Cluster_analysis
+* https://en.wikipedia.org/wiki/Cluster_analysis <br/>
 
 #### K-means
-https://en.wikipedia.org/wiki/K-means_clustering
-
+* https://en.wikipedia.org/wiki/K-means_clustering <br/>
 
 ## Clustering
 
-"Unsupervised Machine Learning: The hclust, pvclust, cluster, mclust, and more," https://quantdev.ssri.psu.edu/sites/qdev/files/Unsupervised_Machine_Learning_The_mclust_Package_and_others.html
+* "Unsupervised Machine Learning: The hclust, pvclust, cluster, mclust, and more," https://quantdev.ssri.psu.edu/sites/qdev/files/Unsupervised_Machine_Learning_The_mclust_Package_and_others.html <br/>
 
 # Linear Models
-
-[Ordinary_least_squares](https://en.wikipedia.org/wiki/)
-[Logistic_regression](https://en.wikipedia.org/wiki/Logistic_regression)
-
-## Feature Selection / Engineering
-
-https://en.wikipedia.org/wiki/Extreme_bounds_analysis
-
-['I JUST RAN Two MILLION REGRESSIONS'](http://www.ecostat.unical.it/Aiello/Didattica/economia_Crescita/CRESCITA/CRESCITA_Sala-i-Martin-AER-1997.pdf), Xavier Sala-i-Martin, 1997, American Economic Review
-
-["ExtremeBounds: Extreme Bounds Analysis in R"](https://cran.r-project.org/web/packages/ExtremeBounds/vignettes/ExtremeBounds.pdf)
-
-https://en.wikipedia.org/wiki/Support_vector_machine
-
-[Feature Selection with the R Package MXM:  Statistically-Equivalent Feature Subsets](https://arxiv.org/pdf/1611.03227.pdf)
-
-["bounceR"](https://github.com/STATWORX/bounceR), R Package 
-
-[ELI5](https://github.com/TeamHG-Memex/eli5)
-
-## Regularization, e.g. Lasso/Ridge Regression
-https://en.wikipedia.org/wiki/Lasso_(statistics)
-
-["Regression shrinkage and selection via the lasso"](http://statweb.stanford.edu/~tibs/lasso/lasso.pdf), Tibshirani, R., 1996,  J. Royal. Statist. Soc B., Vol. 58, No. 1, pages 267-288)
-
-["Glmnet Vignette"](https://cran.r-project.org/web/packages/glmnet/vignettes/glmnet_beta.pdf), Trevor Hastie and Junyang Qian, September 13, 2016
+* [Ordinary_least_squares](https://en.wikipedia.org/wiki/) <br/>
+* [Logistic_regression](https://en.wikipedia.org/wiki/Logistic_regression) <br/>
 
 
 # Decision Trees
+* https://en.wikipedia.org/wiki/Decision_tree <br/>
+* ["Tree-Based Models"](https://www.statmethods.net/advstats/cart.html) <br/>
 
-https://en.wikipedia.org/wiki/Decision_tree
-
-["Tree-Based Models"](https://www.statmethods.net/advstats/cart.html)
+* [“Induction of Decision Trees.”](https://link.springer.com/content/pdf/10.1007/BF00116251.pdf), Quinlan, Ross. 1986., Machine Learning 1(1):81–106.
 
 # Random Forests
 
-https://en.wikipedia.org/wiki/Random_forest
+* https://en.wikipedia.org/wiki/Random_forest <br/>
+* ["RANDOM FORESTS"](https://www.stat.berkeley.edu/~breiman/randomforest2001.pdf) Leo Breiman, January 2001
 
-["RANDOM FORESTS"](https://www.stat.berkeley.edu/~breiman/randomforest2001.pdf) Leo Breiman, January 2001
+* ["Exploratory Data Analysis using Random Forests"](http://zmjones.com/static/papers/rfss_manuscript.pdf)
 
 # Neural Networks
 
-https://en.wikipedia.org/wiki/Artificial_neural_network
+## Demos
 
-(DL) Deep Learning, Ian Goodfellow and Yoshua Bengio and Aaron Courville, 2016, http://www.deeplearningbook.org/
+* [Tensorflow Playground](http://playground.tensorflow.org/#activation=tanh&batchSize=10&dataset=circle&regDataset=reg-plane&learningRate=0.03&regularizationRate=0&noise=0&networkShape=4,2&seed=0.47077&showTestData=false&discretize=false&percTrainData=50&x=true&y=true&xTimesY=false&xSquared=false&ySquared=false&cosX=false&sinX=false&cosY=false&sinY=false&collectStats=false&problem=classification&initZero=false&hideText=false)
+* [ConvNetJS Deep Learning in your browser](https://cs.stanford.edu/people/karpathy/convnetjs/)
+* [KerasJS](https://transcranial.github.io/keras-js/#/)
+
+* https://en.wikipedia.org/wiki/Artificial_neural_network <br/>
+* (DL) Deep Learning, Ian Goodfellow and Yoshua Bengio and Aaron Courville, 2016, http://www.deeplearningbook.org/ <br/>
 
 ### LSTM
-Christopher Olah, "Understanding LSTM Networks," August 27, 2015, http://colah.github.io/posts/2015-08-Understanding-LSTMs/
-
+* Christopher Olah, "Understanding LSTM Networks," August 27, 2015, http://colah.github.io/posts/2015-08-Understanding-LSTMs/ <br/>
 https://keras.rstudio.com/articles/examples/conv_lstm.html
 
 # Interpretation
-
-"Why Should I Trust You?": Explaining the Predictions of Any Classifier, Marco Tulio Ribeiro, Sameer Singh, Carlos Guestrin, https://arxiv.org/abs/1602.04938
-
+* "Why Should I Trust You?": Explaining the Predictions of Any Classifier, Marco Tulio Ribeiro, Sameer Singh, Carlos Guestrin, https://arxiv.org/abs/1602.04938
 lime, Python Package, https://github.com/marcotcr/lime
 
 # Causality
+* ["When and How Should One Use Deep Learning for Causal Effect Inference"](https://technionmail-my.sharepoint.com/personal/urishalit_technion_ac_il/_layouts/15/onedrive.aspx?id=%2Fpersonal%2Furishalit_technion_ac_il%2FDocuments%2FPresentations%2FIAS2018%2FIAS2018_2_for_public%2Epdf&parent=%2Fpersonal%2Furishalit_technion_ac_il%2FDocuments%2FPresentations%2FIAS2018&slrid=aaa2759e-909e-5000-fd16-3e33cabf926f)
 
-"When and How Should One Use Deep Learning for Causal Effect Inference", https://technionmail-my.sharepoint.com/personal/urishalit_technion_ac_il/_layouts/15/onedrive.aspx?id=%2Fpersonal%2Furishalit_technion_ac_il%2FDocuments%2FPresentations%2FIAS2018%2FIAS2018_2_for_public%2Epdf&parent=%2Fpersonal%2Furishalit_technion_ac_il%2FDocuments%2FPresentations%2FIAS2018&slrid=aaa2759e-909e-5000-fd16-3e33cabf926f
-
-Luke Keele, Dylan Small, "Comparing Covariate Prioritization via Matching to Machine Learning Methods for Causal Inference using Five Empirical Applications," May 11, 2018, https://arxiv.org/pdf/1805.03743.pdf
+* ["Comparing Covariate Prioritization via Matching to Machine Learning Methods for Causal Inference using Five Empirical Applications,"](https://arxiv.org/pdf/1805.03743.pdf),Luke Keele, Dylan Small, May 11, 2018, 
 
 
 # Special Topics
 
 ## Time
-["Investigating Sequences in Ordinal Data: A New Approach With Adapted Evolutionary Models,"](https://www.cambridge.org/core/journals/political-science-research-and-methods/article/investigating-sequences-in-ordinal-data-a-new-approach-with-adapted-evolutionary-models/F3747D8A1908902BA7F26C5EE28AFAEF),Patrik Lindenfors, Fredrik Jansson, Yi-ting Wang and Staffan I. Lindberg, Christian Lopez, 05 March 2018,
+* ["Investigating Sequences in Ordinal Data: A New Approach With Adapted Evolutionary Models,"](https://www.cambridge.org/core/journals/political-science-research-and-methods/article/investigating-sequences-in-ordinal-data-a-new-approach-with-adapted-evolutionary-models/F3747D8A1908902BA7F26C5EE28AFAEF),Patrik Lindenfors, Fredrik Jansson, Yi-ting Wang and Staffan I. Lindberg, Christian Lopez, 05 March 2018,
 
 ## Text
-Julia Silge and David Robinson, "Text Mining with R: A Tidy Approach," 2018-04-02, https://www.tidytextmining.com/
-
-"Introducing Monte Carlo Methods with R," https://www.slideshare.net/xianblog/introducing-monte-carlo-methods-with-r
-
-Matthew Gentzkow, Bryan T. Kelly, Matt Taddy, "Text as Data," http://web.stanford.edu/~gentzkow/research/text-as-data.pdf
+* ["Text Mining with R: A Tidy Approach,"](https://www.tidytextmining.com/), Julia Silge and David Robinson, 2018-04-02,   <br/>
+* ["Introducing Monte Carlo Methods with R,"](https://www.slideshare.net/xianblog/introducing-monte-carlo-methods-with-r) <br/>
+* ["Text as Data,"](http://web.stanford.edu/~gentzkow/research/text-as-data.pdf), Matthew Gentzkow, Bryan T. Kelly, Matt Taddy <br/>
 
 ## Images
-
-https://keras.rstudio.com/articles/examples/cifar10_cnn.html
+* https://keras.rstudio.com/articles/examples/cifar10_cnn.html
 
 
 # Examples
-
-Examining Explanations for Nuclear Proliferation
-Mark S. Bell
-International Studies Quarterly, Volume 60, Issue 3, 1 September 2016, Pages 520–529, https://doi.org/10.1093/isq/sqv007
+* ["Examining Explanations for Nuclear Proliferation"](https://doi.org/10.1093/isq/sqv007), Mark S. Bell, International Studies Quarterly, Volume 60, Issue 3, 1 September 2016, Pages 520–529
+* Weidmann, Nils B. and Sebastian Schutte. Using Night Lights for the Prediction of Local Wealth. Journal
+of Peace Research 54(2).
 
 # Extras
 
 ## Gradient Boosting
-Terence Parr and Jeremy Howard, "How to explain gradient boosting," http://explained.ai/gradient-boosting/index.html
+* Terence Parr and Jeremy Howard, "How to explain gradient boosting," http://explained.ai/gradient-boosting/index.html
 
 #### SVM
-[Support_vector_machine](https://en.wikipedia.org/wiki/Support_vector_machine)
+* [Support_vector_machine](https://en.wikipedia.org/wiki/Support_vector_machine)
+
+
+#### How the Sausage is Made
+
+* ["Troubling  Trends  in  Machine  Learning  Scholarship"](https://www.dropbox.com/s/ao7c090p8bg1hk3/Lipton%20and%20Steinhardt%20-%20Troubling%20Trends%20in%20Machine%20Learning%20Scholarship.pdf?dl=0), Zachary  C.  Lipton∗&  Jacob  Steinhardt, July  9,  2018
+
+* [“Bagging Predictors.”](https://link.springer.com/content/pdf/10.1007/BF00058655.pdf),Breiman, Leo. 1996. , Machine Learning 24:123–140.
+
+
+
 
